# giant-utils

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: check-and-lint.yaml
scripts/: build-in-linux-docker.sh  build-in-x86-linux-docker.sh  make-release.sh  run-in-linux-docker.sh
src/: auth_store.rs  giant_api.rs  hash.rs  ingestion_upload.rs  log_channel.rs  main.rs  progress_reader.rs
src/ingestion/: ingestion_upload.rs  mod.rs  progress_reader.rs
src/model/: blob.rs  cli_error.rs  cli_output.rs  collection.rs  exit_code.rs  file_metadata.rs  hash_file_output.rs  ingestion.rs  ingestion_file.rs  lang.rs  log_message.rs  mod.rs  uri.rs
src/model/forms/: create_collection.rs  create_ingestion.rs  mod.rs
src/services/: aws.rs  giant_api.rs  mod.rs  s3_client.rs
