[package]
name = "giant-utils"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
clap = { version = "3.2.16", features = ["derive"] }
dirs = "4.0.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
sha2 = "0.10.2"
thiserror = "1.0.31"
tsv = "0.1.1"
reqwest = { version = "0.11.12", features = ["json"] }
reflection = "0.1.1"
reflection_derive = "0.1.1"
urlencoding = "2.1.0"
regex = "1.6.0"
walkdir = "2.3.2"
futures = "0.3.21"
anyhow = "1.0.59"
aws-config = "0.46.0"
aws-sdk-s3 = "0.16.0"
tokio = { version = "1.21.2", features = ["full"] }
indicatif = "0.17.0"
uuid = { version = "1.1.2", features = ["v4"] }
chrono = { version = "0.4.20", features = ["serde"] }
aws-smithy-http = "0.46.0"
humantime = "2.1.0"
flashmap = "0.1.0"
aws-endpoint = "0.46.0"
http = "0.2.8"
